--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,21 +1,34 @@
-name: publish
+name: GitHub Pages
 
 on:
   push:
     branches:
-    - source
-    
+      - master 
+  pull_request:
+
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  deploy:
+    runs-on: ubuntu-20.04
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
     steps:
-    - name: checkout
-      uses: actions/checkout@master
-    - name: build
-      uses: github-actions-x/hugo@master
-    - name: push
-      uses: github-actions-x/commit@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        push_branch: 'master'
-        commit_message: 'publish'
+      - uses: actions/checkout@v2
+        with:
+          submodules: true 
+          fetch-depth: 0   
+
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: 'latest'
+          extended: true
+
+      - name: Build
+        run: hugo --minify
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        if: ${{ github.ref == 'refs/heads/master' }}
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
