--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://uo258425.github.io/'
+baseURL = 'https://manrique.dev/'
 languageCode = 'es-es'
 title = 'Manrique.dev'
 copyright = "© Carlos Manrique Enguita"
