--- a/config.toml
+++ b/config.toml
@@ -38,6 +38,11 @@ name = "Mail"
 icon = "mail"
 url = "mailto:UO258425@uniovi.es"
 
+[[params.social]]
+name = "Mail"
+icon = "mail"
+url = "mailto:carlos@manrique.dev"
+
 # Menu items
 
 [[menu.main]]
@@ -56,6 +61,11 @@ url = "/about"
 weight = 3
 
 [[menu.main]]
+name = "CV"
+url = "/cv"
+weight = 4
+
+[[menu.main]]
 name = "Tags"
 url = "/tags"
-weight = 4
+weight = 5
