Actualizar perfil github

--- a/config.toml
+++ b/config.toml
@@ -21,7 +21,7 @@ pygmentscodefencesguesssyntax = true
 [[params.social]]
 name = "GitHub"
 icon = "github"
-url = "https://github.com/UO258425"
+url = "https://github.com/carlosmanri"
 
 [[params.social]]
 name = "LinkedIn"
